# OLLMchat

./: .gitattributes  .gitignore  05-39-23-phone-session.json  CHANGELOG.md  LICENSE  MarkdownProcessor.vala  README-agents-and-commands.md  README.md  README.packaging.md  TODO.md  TestOllama.vala  TestWindow.vala  meson.build  meson_options.txt  nasm_2.16.03-1_amd64.deb  needed_tools.md  outline_plan.md  research-current-task-flow-implementation.md  sqgipkg.json  t3  task_list.md  task_list_completed.md  task_list_latest.md  test-list.md  test-markdown-parser.vala  test-markdown.md  testHtmlToMd.vala  test_checking.c  test_diff  test_tree_sitter  vala_iface_static
config/: meson.build
docs/: analysis-task-iteration-issue-names-mismatch.md  android-build-regression-tests.md  android-build.md  android-feasibility.md  android-port-status.md  android-tls-solution.md  android-tls.md  bin-rpc-protocol.md  buffer-system.md  bug-fix-process.md  build-rules.md  code-documentation.md  coding-standards-router.md  coding-standards.md  creating-releases.md  fix-valadoc-index-links.sh  guide-to-writing-plans.md  mcp-settings.md  meson.build  message_creation_flow.md  reference-gtk-css.md  round-trip-failures.md  run-valadoc.sh  signals.md  skills-format.md  task-and-skills-flow.md  version_fake.vala
examples/: TestAppBase.vala  VectorAppBase.vala  meson.build  oc-diff.vala  oc-hf.vala  oc-html2md.vala  oc-local-gguf-chat.vala  oc-local-gguf-embed.vala  oc-markdown-doc-test.vala  oc-markdown-test.vala  oc-md2html.vala  oc-migrate-editors.vala  oc-test-async-signal-connect.vala  oc-test-async-signal-connect2.vala  oc-test-bubble.vala  oc-test-cli.vala  oc-test-fetch.vala  oc-test-files.vala  oc-test-gtkmd.vala  oc-test-loop.vala  oc-test-ollamaweb.vala  oc-test-pull.vala  oc-test-response-array-cast.vala  oc-test-rpc-result-type.vala  oc-test-seccomp-spike.vala  oc-test-skill-agent.vala  oc-test-window.vala  oc-user-notif-exchange.vala  oc-vala-ternary-bug.vala  oc-vector-index.vala  oc-vector-search.vala  test-markdown-parser.vala  vmd2html.vala
libocagent/: BaseAgent.vala  JustAsk.vala  meson.build
libocbwrap/: Bubble.vala  BubbleStub.vala  FileVerification.vala  NoOpFileVerification.vala  Overlay.vala  RunSeccomp.vala  Scan.vala  meson.build  namespace.vala
liboccoder/: Agent.vala  AgentFactory.vala  Approvals.vala  BufferProvider.vala  ClipboardMetadata.vala  FileDropdown.vala  GitProvider.vala  GtkSourceFileBuffer.vala  ProjectDropdown.vala  ProjectManager.vala  ProjectMigrate.vala  SearchableDropdown.vala  SourceView.vala  meson.build  namespace.vala
libocfiles/: BufferProvider.vala  BufferProviderBase.vala  Copyable.vala  DeleteManager.vala  DummyFileBuffer.vala  File.vala  FileAlias.vala  FileBase.vala  FileBuffer.vala  FileChange.vala  FileHistory.vala  FileWithHistory.vala  Folder.vala  FolderFiles.vala  GitProvider.vala  GitProviderBase.vala  JsonOverlay.vala  ProjectFile.vala  ProjectFiles.vala  ProjectList.vala  ProjectManager.vala  ProjectMigrate.vala  ReviewFiles.vala  RpcClient.vala  Tree.vala  TreeBase.vala  meson.build  namespace.vala
libochf/: Download.vala  Model.vala  ModelArray.vala  ModelFile.vala  ModelHubTypes.vala  ModelTreeArray.vala  meson.build  namespace.vala
libocmarkdowngtk/: Render.vala  RenderBox.vala  RenderSourceView.vala  State.vala  Table.vala  TableCell.vala  TopState.vala  meson.build
libocmcp/: Config.vala  Factory.vala  Loader.vala  McpTypes.vala  Registry.vala  Request.vala  Tool.vala  meson.build
libocrpc/: CallParam.vala  Client.vala  ClientBoot.vala  ClientBootWindows.vala  ClientPlatform.vala  ClientPlatformWindows.vala  ClientWindows.vala  Connection.vala  Daemon.vala  Error.vala  Listen.vala  Notification.vala  Request.vala  Response.vala  RpcClient.vala  RpcClientBoot.vala  RpcErrorCode.vala  Session.vala  meson.build  namespace.vala
libocsqlite/: Database.vala  Query.vala  Schema.vala  meson.build
liboctools/: EditMode.vala  EditModeChange.vala  FileVerification.vala  GoogleSearchConfig.vala  GoogleSearchRequest.vala  GoogleSearchTool.vala  GoogleSearchToolConfig.vala  ReadFile.vala  ReadFileSummarize.vala  Registry.vala  RequestEditMode.vala  RequestReadFile.vala  RequestRunCommand.vala  RequestWebFetch.vala  RunCommand.vala  ToolBuilder.vala  WebFetchTool.vala  meson.build
libocvector/: BackgroundScan.vala  CodeElement.vala  CodeFile.vala  Database.vala  Index.vala  Registry.vala  VectorBase.vala  VectorMetadata.vala  faiss_c_wrapper.cpp  faiss_c_wrapper.h  meson.build  namespace.vala
libocvector2/: Database.vala  Index.vala  Search.vala  VectorBase.vala  VectorBuilder.vala  VectorToolConfig.vala  faiss_c_wrapper.cpp  faiss_c_wrapper.h  meson.build
libocwebkit/: A11y.vala  A11yParse.vala  Browser.vala  BrowserStack.vala  Cloudflare.vala  Request.vala  Tool.vala  gresources.xml  meson.build  namespace.vala
libollamaweb/: Model.vala  ModelVariant.vala  meson.build
libollmchat/: ApplicationInterface.vala  ChatContentInterface.vala  ChatDesktopInterface.vala  ChatUserInterface.vala  Client.vala  Config.vala  GGUF.vala  Message.vala  OllamaBase.vala  OllmError.vala  meson.build  namespace.vala
libollmchatgtk/: ChatBar.vala  ChatInput.vala  ChatPermission.vala  ChatView.vala  ChatWidget.vala  ClipboardManager.vala  ClipboardMetadata.vala  HistoryBrowser.vala  Message.vala  ScrolledView.vala  meson.build
ollmapp/: About.vala  ActivityBanner.vala  AgentDropdown.vala  AndroidPoc.vala  AndroidShellPoc.vala  Application.vala  BusyDialog.vala  ChatUserInterface.vala  FileChangeBanner.vala  Initialize.vala  ToolRegistry.vala  VectorScanBanner.vala  Window.vala  WindowPane.vala  meson.build  ollmchat-cli.vala  ollmchat.rc  org.roojs.ollmchat.desktop  version.vala.in
ollmchat/: Application.vala  BootstrapDialog.vala  FileChangeBanner.vala  VectorScanBanner.vala  Window.vala  WindowPane.vala  meson.build
ollmfilesd/: Application.vala  BufferProviderBase.vala  CallParam.vala  Codebase.vala  Copyable.vala  Daemon.vala  DeleteManager.vala  DummyFileBuffer.vala  File.vala  FileAlias.vala  FileBase.vala  FileBuffer.vala  (+21 more)
(+6192 files in other folders)
