option('docs', type: 'boolean', value: true, description: 'Build valadoc documentation')
option('examples', type: 'boolean', value: true, description: 'Build example and test utility executables')
option('tests', type: 'boolean', value: true, description: 'Configure test suite')
option(
  'local_gguf',
  type: 'feature',
  value: 'auto',
  description: 'Build the local GGUF/libllama phase-1 embedding probe'
)
